--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
                 <li>Oppgave 2</li>
             </ul>
         </div>
-        <script src="script.js" type="module"></script>
+        <script type="module" src="script.js" ></script>
     </body>
 </html>
