la til liste i listen

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
             <input type="text" />
             <button>Legg til</button>
 
-            <ul>
-                <li>Oppgave 1</li>
-                <li>Oppgave 2</li>
+            <ul id="liste">
             </ul>
         </div>
         <script type="module" src="script.js" ></script>
